--- a/manifest.json
+++ b/manifest.json
@@ -12,9 +12,12 @@
 
   "content_scripts": [
     {
-      "matches": ["*://*.wikipedia.org/*"],
+      "matches": ["<all_urls>"],
       "js": ["go.js"]
     }
+  ],
+  "permissions": [
+    "activeTab"
   ]
 
 }
