--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,13 @@
 {
-
   "manifest_version": 3,
   "name": "Wikipedia hyperlink colorchanger",
   "version": "1.1",
-
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "wikipedia-colorchanger@example.com"
+    }
+  },
+  
   "description": "Underline Wikipedia hyperlinks in different colors, according to their global relevance",
 
   "icons": {
@@ -21,5 +25,4 @@
     "<all_urls>",
     "activeTab"
   ]
-
 }
