fix manifest.json by correcting the extension ID format and refresh the color swap zip file

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.1",
   "browser_specific_settings": {
     "gecko": {
-      "id": "74a6d063-cd5c-4ddc-a46e-928704bfa4ac"
+      "id": "{74a6d063-cd5c-4ddc-a46e-928704bfa4ac}"
     }
   },
   
